[gd_scene load_steps=4 format=2]

[ext_resource path="res://gd/PlayerShot.gd" type="Script" id=1]
[ext_resource path="res://NES - Space Invaders JPN - General Sprites.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 0.335481, 3.02344 )

[node name="PShot" type="Area2D"]
pause_mode = 2
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -0.0165544, 0 )
scale = Vector2( 0.63581, 1 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 120, 54, 1, 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="ExplodeTimer" type="Timer" parent="."]
one_shot = true

[node name="Explosion" type="Sprite" parent="."]
visible = false
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 103, 37, 7, 7 )

[connection signal="area_entered" from="." to="." method="_on_PlayerShot_area_entered"]
[connection signal="timeout" from="ExplodeTimer" to="." method="_on_ExplodeTimer_timeout"]
